syntax = "proto3";

package auth;

import "permission.proto";
import "project.proto";
import "role.proto";
import "user.proto";

service IAM {
  rpc CreatePermission(permission.Permission) returns (permission.Permission) {}
  rpc GetPermission(permission.Permission) returns (permission.Permission) {}
  rpc ListPermissions(permission.Permission) returns (permission.PermissionList) {}
  rpc UpdatePermission(permission.Permission) returns (permission.Permission) {}
  rpc DeletePermission(permission.Permission) returns (permission.Permission) {}

  rpc CreateProject(project.Project) returns (project.Project) {}
  rpc GetProject(project.Project) returns (project.Project) {}
  rpc ListProjects(project.Project) returns (project.ProjectList) {}
  rpc UpdateProject(project.Project) returns (project.Project) {}
  rpc DeleteProject(project.Project) returns (project.Project) {}

  rpc CreateRole(role.Role) returns (role.Role) {}
  rpc GetRole(role.Role) returns (role.Role) {}
  rpc ListRoles(role.Role) returns (role.RoleList) {}
  rpc UpdateRole(role.Role) returns (role.Role) {}
  rpc DeleteRole(role.Role) returns (role.Role) {}

  rpc CreateUser(user.User) returns (user.User) {}
  rpc GetUser(user.User) returns (user.User) {}
  rpc ListUsers(user.User) returns (user.UserList) {}
  rpc UpdateUser(user.User) returns (user.User) {}
  rpc DeleteUser(user.User) returns (user.User) {}
}


