syntax = "proto3";

import "project.proto";

package user;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated project.Project project = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UserList {
  repeated User user = 1;
}